# cli

./: .gitattributes  .githooks  .gitignore  .mcp.json  .npmignore  .oxfmtrc.json  .oxlintrc.json  .prettierignore  .prototools  .simple-release.js  APPROVAL_POLICY.md  ASSURANCE-CASE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  MAINTAINERS.md  README.md  ROADMAP.md  SECURITY.md  bunfig.toml  codecov.yml  install.ps1  install.sh  knip.json  package.json  pr446-comments.json  renovate.json  tsconfig.json  zizmor.yml
.archgate/: config.json
.archgate/PRDs/: ast-aware-rule-context.md
.archgate/adrs/: ARCH-001-command-structure.md  ARCH-001-command-structure.rules.ts  ARCH-002-error-handling.md  ARCH-002-error-handling.rules.ts  ARCH-003-output-formatting.md  ARCH-003-output-formatting.rules.ts  ARCH-004-no-barrel-files.md  (+54 more)
.claude/: settings.json  settings.local.json
.cursor/: mcp.json
docs/: 01-strategic-plan.md  02-tactical-plan.md  03-technical-plan.md  06-cursor-integration-plan.md  06-launch-plan.md  astro.config.mjs  package.json
lint/: expect-expect.ts  no-bare-env-restore.ts
plans/: 01-strategic-plan.md  02-tactical-plan.md  04-distribution-plan.md  05-plugin-distribution-plan.md  06-cursor-integration-plan.md
scripts/: add-spdx-headers.ts  archgate.rb  build.ts  check-licenses.ts  install.sh  postinstall.cjs
shims/pypi/: README.md  pyproject.toml  requirements-build.txt
shims/pypi/archgate/: __init__.py  __main__.py  _shim.py
shims/pypi/tests/: test_shim.py
src/: cli.ts
tests/: preload.ts  test-utils.ts
(+520 files in other folders)
