[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "archgate"
version = "0.50.1"
description = "Enforce Architecture Decision Records as executable rules — for both humans and AI agents"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
keywords = [
  "adr",
  "archgate",
  "architecture-decision-records",
  "cli",
  "governance",
  "linter",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.scripts]
archgate = "archgate._shim:main"

[project.urls]
Homepage = "https://cli.archgate.dev"
Documentation = "https://cli.archgate.dev"
Repository = "https://github.com/archgate/cli"
Issues = "https://github.com/archgate/cli/issues"
Changelog = "https://github.com/archgate/cli/blob/main/CHANGELOG.md"
